--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "storybook": "start-storybook -s public -p 6006",
     "build-storybook": "build-storybook",
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "export": "next export",
     "deploy-static": "npm run build && npm run export",
     "lint-staged": "lint-staged",
@@ -56,12 +57,12 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-storybook": "^0.5.12",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "jest-styled-components": "^7.0.8",
     "jsdom": "^19.0.0",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
     "typescript": "^4.7.3",
-    "vitest": "^0.13.1"
+    "vitest": "^0.14.1"
   }
 }
